deploy: 297f563eafe8144997d20222dc20b44d1202039e

--- a/contribution-guide/how-to-build-toolchain.html
+++ b/contribution-guide/how-to-build-toolchain.html
@@ -176,6 +176,7 @@ $ ./tools/git-swift-workspace --scheme main
 <li><a href="https://github.com/apple/swift/blob/main/docs/HowToGuides/GettingStarted.md#installing-dependencies">Please follow the upstream instruction</a></li>
 <li>(If you want to run test suite) Install <a href="https://wasmtime.dev/"><code>Wasmtime</code></a></li>
 </ol>
+<p>If you are using macOS, please ensure that you don't have <code>llvm</code> package installed via Homebrew.</p>
 <h2><a class="header" href="#3-build-the-toolchain" id="3-build-the-toolchain">3. Build the toolchain</a></h2>
 <p><code>./tools/build/build-toolchain.sh</code></p>
 <p>This script will build the following components:</p>
